netwerk/base/src/nsUDPSocket.cpp
@@ -274,7 +274,10 @@ nsUDPSocket::nsUDPSocket()
 
 nsUDPSocket::~nsUDPSocket()
 {
-  Close(); // just in case :)
+  if (mFD) {
+    PR_Close(mFD);
+    mFD = nullptr;
+  }
 
   MOZ_COUNT_DTOR(nsUDPSocket);
 }
